# Synapse

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CRUSH.md  Cargo.toml  Dockerfile  MCP_FIXES.md  README.md  docker-compose.yml  install-binary.sh  install.bat  install.sh  package.json  test_api_key.rs  uninstall.sh
loglens/: .dockerignore  .env.example  .gitignore  AI_PROVIDER_SETTINGS_IMPLEMENTATION_PLAN.md  CLAUDE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  MCP_IMPLEMENTATION_PLAN.md  MCP_USAGE.md  Makefile  PHASE_4_COMPLETION.md  PHASE_4_COMPLETION_REPORT.md  README.md  V0.2.0-LOGLENS-IMPLEMENTATION-PLAN.md  VITE_TO_AXUM_MIGRATION_PLAN.md  docker-compose.yml  install.bat  install.sh  nano.125014.save  start.sh  uninstall.sh
loglens-cli/: Cargo.toml
loglens-cli/src/: main.rs
loglens-cli/tests/: cli_tests.rs
loglens/.github/workflows/: quality-pipeline.yml
loglens/.loglens/: config.toml  metadata.json
loglens/.sqlx/: query-00a3d48b101d481102574132bfc980f3a134ba04a121d8e79edec9536416d218.json  query-0a1c0e1e85217b91ba6f44759d8d3dbcb694bda5ae8ea696d1b1eeb11f05ada5.json  query-24b5c93ffecb8b845c44cdb114ee08fbdde7959063a58b76c92e834f28c28d1c.json  query-24e0e2bc20ef5e6b3be399e6ab25d322ccfd14bdb7a99218644d7e6219361795.json  query-57b8e39520d6e8ebb33890940ac5ca2dfcdf687240b5203ef027c42296bec664.json  query-6079ff528e3bce3706f5e4d9b228c2fda9b0f190576022de921b3236149eb1a8.json  query-68bf8d7e94a45ddd2c4e3821563f8d64f1ced41103a132ebbd9ebd24f27bc0c3.json  query-6a1597b0f48dc52297f604fee6bd84ae061bb690498a703bf0ac0bfae8b5325e.json  query-74bac645a28139c6be20b0dbf2566dda30ae92d6d3fddfb96af683a3f1ce5998.json  query-7502d49efd67e006ab2ae3d9f70112b3b911dc15a656006e0093f90e5fbd02c5.json  query-76be0c6c4be29738931cca852cf4ad7b0f6129bc5427d1bae8a33759aa664894.json  query-81551be911b3615157dd24c50d01dca71384d7690eccf859ea8059d3ed77b7bb.json  query-9150364407785175e492c03db268ab5fcba410f54ee05193a6b22d142574834f.json  query-a01067f92f6fdc3aea7801ec2c711c3d474a023f71e7572d3a1b2dc7f990b85b.json  query-a37d9f3621f98831a7a8a6ac9ac23ac43db24297c23d75f9fb5a723c36e04d14.json  query-a67758da9ce0a6d9fb04593ba7734344c2e1164fcaf0bb3549da6fac150d7d73.json  query-bfa51f4b74d758205263c593967734889690ed743b304fcbbac38ca5443ab8d4.json  query-c2692c9850c17f066dc790e9e82daf4885c5777bc89698b28f0e627c5697aa03.json  query-cace8d76771959e8a6397241d1b5656cf0a7c7e2427e0665736fa7735cf50477.json  query-e199135ea4c6d5c0d0f23ced814a02d331e6e7fe58405105fa7cf3683c780007.json  query-e2bbba0b71ea26ed58ec4f327bbe00871e52e3a28dadb661e16b1cc7003ce2a3.json  query-e8139b4bfe78b94bec5af1180972de2bef50ca4df880d1b0e7c2253280861ed5.json  query-eef587ab7ff4ab6e105bff55b6fda03c59ae4a714b2b18f9350dde9d5a3d4b84.json  query-f7f75ead3a3c418edd4d66158a1e0939c5ce3dc4aa9fc6e4a9b3740469391ce5.json  query-f963ff6a49a6f8fa2ec29474ff8d77ee6e97602c0a88165d36a424e4938a9992.json
loglens/docs/: API.md  COMPREHENSIVE_FEATURE_GUIDE.md  CONFIGURATION.md  FEATURE_EXTENSION_GUIDE.md  IMPLEMENTATION_PLAN_UNUSED_FEATURES.md  INSTALL_UPDATES.md  MCP_CLIENT_INTEGRATION.md  MCP_INTEGRATION_PLAN.md  MCP_SERVER.md  MCP_USAGE.md  PHASE_1_COMPLETION.md  PHASE_2_COMPLETION.md  PHASE_3_IMPLEMENTATION_PLAN.md  QUALITY_ENGINEERING.md  README.md  TESTING_IMPLEMENTATION_PROMPT.md  USER_GUIDE.md
loglens/loglens-cli/: Cargo.toml
loglens/loglens-cli/src/: main.rs
loglens/loglens-core/: Cargo.toml
loglens/loglens-core/.sqlx/: query-9b843085f7d09363493ec3c2e52795f4055fd98a74f17ec60f19103876618645.json
loglens/loglens-core/src/: analyzer.rs  classification.rs  config.rs  context_manager.rs  db_path.rs  filter.rs  input.rs  lib.rs  parser.rs  slimmer.rs
loglens/loglens-core/templates/: report_template.html
loglens/loglens-core/tests/: integration_tests.rs  mcp_integration.rs
loglens/loglens-mcp/: Cargo.toml
loglens/loglens-mcp/src/: lib.rs  schema.rs  server.rs
loglens/loglens-wasm/: Cargo.toml  package.json
loglens/loglens-wasm/tests/: wasm_tests.rs
loglens/loglens-web/: Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  dev.sh
loglens/loglens-web/.sqlx/: query-298d3dab52eafe46559db97ae6f0e80a1f65484df44075257c3f947a7e1b3641.json  query-2d56f944a61fe2ab82c05316bd45550bc98c49f638f7c42bdc0b51ea3195443a.json
loglens/loglens-web/claudedocs/: API_DOCUMENTATION.md
loglens/loglens-web/frontend/: Cargo.toml  Trunk.toml  index.html
loglens/loglens-web/frontend-react/: .eslintrc.json  FEATURES.md  cypress.config.ts  package.json  tsconfig.json  vite.config.ts
loglens/loglens-web/migrations/: 20240101000003_settings.sql  20240101000004_settings_model_config.sql
loglens/loglens-web/src/: cache.rs  config.rs  database.rs  error_handling.rs  handlers.rs  lib.rs  main.rs  models.rs  performance.rs  routes.rs  streaming.rs  validation.rs
loglens/loglens-web/templates/: report_template.html  streaming_dashboard.html
loglens/loglens-web/tests/: api_integration.rs  error_handling_tests.rs  metrics_tests.rs  new_features_integration.rs
loglens/scripts/: import_cli_projects.sh
loglens/templates/: report_template.html
loglens/test-project/.loglens/: config.toml  metadata.json
src/: analyzer.rs  (+14 more)
synapse-cli/: Cargo.toml
synapse-cli/src/: main.rs
synapse-cli/tests/: cli_tests.rs
synapse-mcp/: Cargo.toml
synapse-mcp/src/: lib.rs  schema.rs  server.rs  validation.rs
synapse-mcp/tests/: integration_tests.rs  transport_tests.rs
synapse-wasm/: Cargo.toml  package.json
synapse-wasm/src/: lib.rs  streaming.rs
synapse-web/: Cargo.toml  README.md
synapse-web/frontend-react/: FEATURES.md  WEBSOCKET_ANALYSIS_INTEGRATION.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
synapse-web/migrations/: 20240101000001_initial.sql  20240101000002_knowledge_base.sql  20250101000005_streaming_sources.sql  20250107000006_cli_project_integration.sql
synapse-web/src/: config.rs  database.rs  error_handling.rs  lib.rs  main.rs  models.rs  routes.rs  streaming.rs
synapse-web/templates/: report_template.html  streaming_dashboard.html
synapse-web/tests/: web_tests.rs
(+254 files in other folders)
