[package]
name = "loglens"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
# Advanced filtering
pest = "2.7"
pest_derive = "2.7"
# AI/ML features
ndarray = "0.15"
linfa = "0.7"
linfa-clustering = "0.7"
linfa-linear = "0.7"
# Advanced analytics
statrs = "0.16"
# Plugin system
libloading = "0.8"
# Visualization
plotters = { version = "0.3", optional = true }
svg = "0.15"
# TUI Support
crossterm = { version = "0.27", optional = true }
tui = { version = "0.19", default-features = false, features = ["crossterm"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
# Better error handling
anyhow = "1.0"
thiserror = "1.0"
# Configuration
toml = "0.8"
dirs = "5.0"
# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }
# Async trait for LLM providers
async-trait = "0.1"
# UUID generation
uuid = { version = "1.0", features = ["v4"] }
# Iterator utilities
itertools = "0.12"

[features]
default = []
visualization = ["plotters"]
tui = ["dep:crossterm", "dep:tui", "dep:tokio", "dep:futures"]

[[bin]]
name = "test_api_key"
path = "test_api_key.rs"
required-features = ["tui"]
