[workspace]
members = ["loglens-core", "loglens-cli", "loglens-web", "loglens-web/frontend", "loglens-wasm"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across workspace
clap = { version = "4.4", features = ["derive", "env"] }
regex = "1.10"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
toml = "0.8"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
askama = { version = "0.12", features = ["serde-json"] }
uuid = { version = "1.0", features = ["v4"] }
rmcp = { version = "0.2.0", features = ["server", "transport-io"] }
schemars = { version = "0.8", features = ["derive"] }
encoding_rs = "0.8"
tempfile = "3.8"

# Web-specific dependencies
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# WASM-specific dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"