[package]
name = "synapse-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server implementation for Synapse"
authors.workspace = true

[dependencies]
# MCP SDK - using rmcp which is already in workspace
rmcp = { workspace = true, features = ["server", "transport-io", "transport-sse-server"] }

# Web server for HTTP transport
axum = { workspace = true }
tower = { workspace = true }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Database
sqlx = { workspace = true }

# Local dependencies
synapse-core = { path = "../synapse-core" }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["project-management"]
project-management = ["synapse-core/project-management"]