[package]
name = "synapse-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
console_error_panic_hook = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
serde-wasm-bindgen = "0.6"
wee_alloc = { version = "0.4", optional = true }
once_cell = "1.18"


[features]
default = ["wee_alloc"]

[dependencies.web-sys]
workspace = true
features = [
  "console",
  "File",
  "FileList",
  "FileReader",
  "Blob",
  "DragEvent",
  "DataTransfer",
  "Event",
  "EventTarget",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "ErrorEvent",
  "BinaryType",
]
