[package]
name = "synapse-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "synapse-web"
path = "src/main.rs"

[dependencies]
synapse-core = { path = "../synapse-core" }
axum = { workspace = true, features = ["ws", "multipart"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
uuid = { workspace = true, features = ["v4", "serde"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.0"
futures = "0.3"
hyper = { version = "1.0", features = ["full"] }
askama = { version = "0.12", features = ["serde-json"] }
toml = "0.8"
dotenv = "0.15"
lazy_static = "1.4"
encoding_rs = "0.8"
bytes = "1.0"
sysinfo = "0.30"
# Export functionality dependencies
pulldown-cmark = "0.9"
wkhtmltopdf = "0.4"
tempfile = "3.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
assert_matches = "1.5"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }


