[package]
name = "loglens-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "loglens"
path = "src/main.rs"

[dependencies]
loglens-core = { path = "../loglens-core" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true